# minerva

./: .gitignore  README.md  pyproject.toml
annota/: DESIGN.md  PLAN.md  README.md  pyproject.toml
annota/annota/: cli.py  metrics.py  reader.py  server.py  store.py
annota/tests/: conftest.py  test_env.py  test_metrics.py  test_reader.py  test_server.py  test_store.py
annota/web/: index.html
benchmarks/: bench.py  bench_alias.py  bench_ensemble.py  bench_pipeline_reco.py  bench_pipeline_timeline.py  bench_reference.py  bench_refine.py  bench_texte.txt  bench_timeline.py  chronique_texte.txt  fusion_texte.txt  rapport-2026-07-03.md  reference_chronique_texte.json  reference_fusion_texte.json  reference_reference_texte.json  reference_scoring.py  reference_texte.txt  reference_timeline_texte.json  rescore.py  timeline_texte.txt
benchmarks/results/2026-07-03/: bench_gemma4_latest.json  bench_gpt-oss_120b.json  bench_gpt-oss_120b_t0.7_run1.json  (+35 more)
docs/plans/: 2026-07-04-timeline.md  2026-07-04-viz.md  2026-07-05-reference.md
docs/specs/: 2026-07-03-minerva-data-model-design.md  2026-07-04-minerva-timeline-design.md  2026-07-04-minerva-viz-design.md  2026-07-05-minerva-reference-design.md
src/minerva/: __init__.py  chunking.py  cli.py  ensemble.py  extraction.py  model.py  refine.py  store.py  timeline.py  viz.py
tests/: test_assertions.py  test_chunking.py  test_cli.py  test_ensemble.py  test_extraction.py  test_hardening.py  test_model.py  test_reference_scoring.py  test_references.py  test_refine.py  test_store.py  test_timeline.py  test_viz.py
(+109 files in other folders)
